[package]
name = "foghorn-api"
version.workspace = true
edition.workspace = true

[[bin]]
name = "foghorn-api"
path = "src/main.rs"

[dependencies]
foghorn-core = { path = "../foghorn-core" }
tokio = { workspace = true }
axum = { workspace = true }
sqlx = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
anyhow = { workspace = true }
tower-http = { workspace = true }
uuid = { workspace = true }
chrono = { workspace = true }
