[package]
name = "foghorn-probe"
version.workspace = true
edition.workspace = true

[[bin]]
name = "foghorn-probe"
path = "src/main.rs"

[dependencies]
foghorn-core = { path = "../foghorn-core" }
tokio = { workspace = true }
reqwest = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
sha2 = { workspace = true }
hex = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
anyhow = { workspace = true }
sqlx = { workspace = true }
uuid = { workspace = true }
chrono = { workspace = true }
json-patch = { workspace = true }
serde_yaml = "0.9"
k256 = { workspace = true }
sha3 = { workspace = true }
